--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,13 +2,25 @@
 
 <h1>Articles</h1>
 
-<div id="articles">
-  <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
-  <% end %>
-</div>
-
+<table>
+  <thead>
+    <tr>
+      <th> Title </th>
+      <th> Description </th>
+      <th colspan="3"> Actions </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @articles.each do |article| %>
+      <tr>
+        <td><%= article.title %></td>
+        <td><%= article.description %></td>
+        <td><%= link_to "Show", article_path(article) %></td>
+        <td><%= link_to "Edit", edit_article_path(article) %></td>
+        <td><%= button_to "Delete", article,
+        method: :delete %></td>
+      </tr>
+      <% end %>
+  </tbody>
+</table>
 <%= link_to "New article", new_article_path %>
