--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,12 @@
 <p style="color: green"><%= notice %></p>
+<h1> Showing Article Details </h1>
 
-<%= render @article %>
+<p><strong>Title: </strong><%= @article.title %></p>
+<p><strong>Description: </strong><%= @article.description %></p>
 
 <div>
   <%= link_to "Edit this article", edit_article_path(@article) %> |
   <%= link_to "Back to articles", articles_path %>
-
+<br />
   <%= button_to "Destroy this article", @article, method: :delete %>
 </div>
